feat: add spatial heatmap to player profiles
